<resources>
    <string name="app_name">퍼스트케어</string>
    <string name="userLogin_msg_err_01">아이디와 비밀번호를 확인해 주세요.</string>
    <string name="userLogin_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="userLogin_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="getUserInfo_msg_err_01">회원 정보가 없습니다.</string>
    <string name="getUserInfo_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="getUserInfo_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="getProgramList_msg_err_01">서비스 목록이 없습니다.</string>
    <string name="getProgramList_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="getProgramList_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="getUserAgencyList_msg_err_01">매칭된 제공기관 목록이 없습니다.</string>
    <string name="getUserAgencyList_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="getUserAgencyList_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="getCommuteInfo_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="getCommuteInfo_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="getToWork_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="getToWork_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="finishWork_msg_01">퇴근 처리가 완료 되었습니다.</string>
    <string name="finishWork_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="finishWork_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="afterGetToWorkCommuteInfo_msg_01">출근 처리가 완료 되었습니다.</string>
    <string name="afterGetToWorkCommuteInfo_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="afterGetToWorkCommuteInfo_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="getChildAttInfo_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="getChildAttInfo_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="getAgencyList_msg_err_01">제공기관 목록이 없습니다.</string>
    <string name="getAgencyList_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="getAgencyList_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="insertChildAttendace_msg_fin_01">출석 처리가 완료 되었습니다.</string>
    <string name="insertChildAttendace_msg_fin_02">결석 처리가 완료 되었습니다.</string>
    <string name="insertChildAttendace_msg_err_01">처리가 실패 하였습니다.</string>
    <string name="insertChildAttendace_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="insertChildAttendace_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="updateChildAttendance_msg_fin_01">출석 취소가 완료 되었습니다.</string>
    <string name="updateChildAttendance_msg_fin_02">결석 취소가 완료 되었습니다.</string>
    <string name="updateChildAttendance_msg_err_01">처리가 실패 하였습니다.</string>
    <string name="updateChildAttendance_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="updateChildAttendance_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="deleteChildAttendance_msg_fin_01">미등록 처리가 완료 되었습니다.</string>
    <string name="deleteChildAttendance_msg_err_01">처리가 실패 하였습니다.</string>
    <string name="deleteChildAttendance_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="deleteChildAttendance_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="userSignUp_msg_err_01">회원가입을 실패 하였습니다.</string>
    <string name="userSignUp_msg_err_02">데이터 오류가 발생 하였습니다.</string>
    <string name="userSignUp_msg_err_03">네트워크 오류가 발생 하였습니다.</string>
    <string name="changePassword_msg_fin_01">비밀번호가 변경 되었습니다.</string>
    <string name="changePassword_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="changePassword_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="modifyUserInfo_msg_fin_01">기본정보가 변경 되었습니다.</string>
    <string name="modifyUserInfo_msg_err_01">데이터 오류가 발생 하였습니다.</string>
    <string name="modifyUserInfo_msg_err_02">네트워크 오류가 발생 하였습니다.</string>
    <string name="Common_msg_network_err">네트워크 오류가 발생 하였습니다.</string>
    <string name="Common_msg_permission_err">위치 접근 권한을 허용해 주세요.</string>
    <string name="Common_msg_gps_err">GPS 기능이 꺼져 있습니다. GPS 기능을 켜주세요.</string>
    <string name="Common_text_getToWork">출근</string>
    <string name="Common_text_finishWork">퇴근</string>
    <string name="snackbar_msg_gpspoint_err">잘못된 GPS 위치 데이터 입니다.</string>
    <string name="snackbar_msg_findaddr_err">주소를 찾을 수 없습니다.</string>
    <string name="PhoneAuth_popup_title_01">휴대폰 본인인증</string>
    <string name="PhoneAuth_text_authFin">휴대폰 인증 완료</string>
    <string name="PhoneAuth_text_authDefault">휴대폰 본인인증</string>
    <string name="PhoneAuth_msg_sendFin">인증번호를 발송 하였습니다.</string>
    <string name="PhoneAuth_msg_token_err">네트워크 오류가 발생 하였습니다.</string>
    <string name="PhoneAuth_msg_inputNumber_err">인증번호를 정확히 입력해 주세요.</string>
    <string name="PhoneAuth_msg_numberMatch_err">인증번호가 일치하지 않습니다.</string>
    <string name="PhoneAuth_msg_countdown_err">(입력 시간 초과) 인증번호 발송을 다시 해주세요.</string>
    <string name="PhoneAuth_msg_numberMatch_finish">인증번호가 확인 되었습니다. 인증완료를 눌러 주세요.</string>
    <string name="PhoneAuth_msg_inputPhoneNumber_err">휴대폰 번호를 입력해 주세요.</string>
    <string name="PhoneAuth_msg_inputPhoneNumberPattern_err">휴대폰 번호를 올바르게 입력해 주세요.</string>
    <string name="Dialog_title_default">알림</string>
    <string name="Dialog_title_FindId">아이디 찾기</string>
    <string name="Dialog_title_FindPW">비밀번호 찾기</string>
    <string name="Dialog_title_phoneAuth">휴대폰 본인인증</string>
    <string name="Dialog_title_idDuplicateCheck">아이디 중복확인</string>
    <string name="Dialog_title_searchAddress">도로명 주소 검색</string>
    <string name="Dialog_title_searchAgency">소속기관 검색</string>
    <string name="Dialog_title_getToWorkInfo">출근 위치</string>
    <string name="Dialog_title_finishWorkInfo">퇴근 위치</string>
    <string name="Dialog_title_searchCommuteList">이전기록조회</string>
    <string name="Dialog_title_userAttendance">이용자 출석 관리</string>
    <string name="SelectLoginTypeActivity_msg_selectType_err">로그인 권한을 선택해 주세요.</string>
    <string name="LoginActivity_msg_inputId_err">아이디를 입력해 주세요.</string>
    <string name="LoginActivity_msg_inputIdCount_err">아이디를 네 글자 이상 입력해 주세요.</string>
    <string name="LoginActivity_msg_inputIdPattern_err">아이디는 영문, 숫자만 입력 가능합니다.</string>
    <string name="LoginActivity_msg_inputPW_err">비밀번호를 입력해 주세요.</string>
    <string name="LoginActivity_msg_inputPWCount_err">비밀번호를 6자리 이상 입력해 주세요.</string>
    <string name="LoginActivity_msg_inputPWPattern_err">비밀번호를 영문,숫자,특수문자 조합으로\n6~15자 이하로 입력해 주세요.</string>
    <string name="FindIDFragment_popup_title_01">아이디 찾기</string>
    <string name="FindIDFragment_msg_selectUserType">회원구분을 선택해 주세요.</string>
    <string name="FindIDFragment_msg_inputName_err">이름(한글)을 올바르게 입력해 주세요.</string>
    <string name="FindIDFragment_msg_inputPhoneNumber_err">휴대폰 번호를 올바르게 입력해 주세요.</string>
    <string name="FindIDFragment_msg_inputId_err">아이디를 입력해 주세요.</string>
    <string name="FindIDFragment_msg_inputIdCount_err">아이디를 네 글자 이상 입력해 주세요.</string>
    <string name="FindIDFragment_msg_inputIdPattern_err">아이디는 영문, 숫자만 입력 가능합니다.</string>
    <string name="FindIDFragment_msg_phoneAuth_err">휴대폰 본인인증을 해주세요.</string>
    <string name="FindPWFragment_popup_title_01">비밀번호 찾기</string>
    <string name="FindPWFragment_msg_selectUserType">회원구분을 선택해 주세요.</string>
    <string name="FindPWFragment_msg_inputName_err">이름(한글)을 올바르게 입력해 주세요.</string>
    <string name="FindPWFragment_msg_inputId_err">아이디를 입력해 주세요.</string>
    <string name="FindPWFragment_msg_inputIdCount_err">아이디를 네 글자 이상 입력해 주세요.</string>
    <string name="FindPWFragment_msg_inputIdPattern_err">아이디는 영문, 숫자만 입력 가능합니다.</string>
    <string name="FindPWFragment_msg_phoneAuth_err">휴대폰 본인인증을 해주세요.</string>
    <string name="SelectSignUpTypeActivity_msg_selectType_err">회원가입 권한을 선택해 주세요.</string>
    <string name="SignUpActivity_text_signUpTitle_01">기본정보</string>
    <string name="SignUpActivity_text_signUpTitle_02">기본정보</string>
    <string name="TypeVCheckSignUpFragment_text_CheckTitle_01">이용약관 동의</string>
    <string name="TypeVCheckSignUpFragment_text_CheckTitle_02">위치기반 서비스 이용약관 동의</string>
    <string name="TypeVTermOfUseFragment_msg_termofuse_err">이용약관에 동의해 주세요.</string>
    <string name="TypeVTermOfUseFragment_msg_privacy_err">개인정보 수집에 동의해 주세요.</string>
    <string name="TypeVPermissionFragment_msg_permission_err">위치기반 서비스 이용약관에 동의해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_text_passwordMatch">일치</string>
    <string name="TypeVSignUpFirstFragment_text_passwordNotMatch">불일치</string>
    <string name="TypeVSignUpFirstFragment_text_availableId">사용 가능한 아이디 입니다.</string>
    <string name="TypeVSignUpFirstFragment_text_duplicateId">이미 사용 중인 아이디 입니다.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputId_err">아이디를 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_duplicateId_err">아이디 중복 확인을 해주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputPW_err">비밀번호를 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputMatchPW_err">비밀번호 확인을 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_matchPW_err">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
    <string name="TypeVSignUpFirstFragment_msg_phoneAuth_err">휴대폰 본인인증을 해주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputIdCount_err">아이디를 영문,숫자 조합 6~12자 이내로 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputIdPattern_err">아이디를 영문,숫자 조합 6~12자 이내로 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputPWCount_err">비밀번호를 6자리 이상 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputPWPattern_err">비밀번호를 영문,숫자,특수문자 조합으로\n6~15자 이하로 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_msg_inputName_err">이름(한글)을 올바르게 입력해 주세요.</string>
    <string name="TypeVSignUpFirstFragment_popup_title_01">아이디 중복확인</string>
    <string name="TypeVSignUpSecondFragment_msg_inputEmailId_err">이메일 아이디를 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_inputEmailIdEN_err">이메일 아이디를 올바르게 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_selectEmailDomain_err">이메일 주소를 선택해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_inputEmailDomain_err">이메일 주소를 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_inputEmailDomainPattern_err">이메일 주소를 올바르게 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_checkboxEmailAgree_err">이메일 수신여부를 선택해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_selectSearchAddress_err">도로명 주소를 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_inputAddress_err">상세 주소를 입력해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_selectSearchAgency_err">소속기관을 선택해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_msg_selectGender_err">성별을 선택해 주세요.</string>
    <string name="TypeVSignUpSecondFragment_text_searchAddress">도로명 주소 검색</string>
    <string name="TypeVSignUpSecondFragment_text_searchAgency">소속기관 검색</string>
    <string name="CommuteInfoActivity_text_typeG">대상자\u00B7보호자</string>
    <string name="CommuteInfoActivity_text_typeN">선생님</string>
    <string name="type_g">대상자 \u00B7 보호자</string>
    <string name="type_n">케어선생님</string>
    <string name="type_v">제공인력</string>
    <string name="next">다음</string>
    <string name="id">아이디</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="user_type">회원구분</string>
    <string name="name">이름</string>
    <string name="input_name">이름 입력</string>
    <string name="phone">휴대폰</string>
    <string name="confirm">확인</string>
    <string name="user_phone_auth">휴대폰 본인인증</string>
    <string name="select_sign_up_type_01">회원가입을 위해</string>
    <string name="select_sign_up_type_02">권한을 선택해 주세요.</string>
    <string name="id_essential">아이디 (필수)</string>
    <string name="duplicate_check">중복확인</string>
    <string name="password_essential">비밀번호 (필수)</string>
    <string name="password_match_essential">비밀번호 확인 (필수)</string>
    <string name="not_match">불일치</string>
    <string name="name_essential">이름 (필수)</string>
    <string name="phone_number_essential">휴대폰 (필수)</string>
</resources>