<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:visibility="visible"
    android:padding="@dimen/_20sdp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/iv_back"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/icn_back_01" />

        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:gravity="left|center"
            android:text="@string/find_password"
            android:textColor="@color/fc_mainColor"
            android:textSize="@dimen/_12sdp" />



    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/layout_inputLayer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_weight="1"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:textColor="@color/fc_mainColor"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_type"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />



            <Spinner

                android:textColor="@color/fc_mainColor"
                android:popupElevation="3dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/sp_selectType"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bg_input_rounded_01"
                android:entries="@array/selectType"
                />

            <TextView

                android:textColor="@color/fc_mainColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
            <EditText
                android:inputType="text"
                android:textColorHint="@color/fc_middleLightColor2"
                android:id="@+id/edtxt_inputId"
                android:textColor="@color/fc_mainColor"
                android:singleLine="true"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/bg_input_rounded_01"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:hint="@string/input_id"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"/>
            <TextView

                android:textColor="@color/fc_mainColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
            <EditText
                android:inputType="text"
                android:textColorHint="@color/fc_middleLightColor2"
                android:id="@+id/edtxt_inputName"
                android:textColor="@color/fc_mainColor"
                android:singleLine="true"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/bg_input_rounded_01"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:hint="@string/input_name"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"/>
            <TextView
                android:textColor="@color/fc_mainColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />
            <Button
                android:stateListAnimator="@null"
                android:id="@+id/btn_phoneAuth"
                android:textColor="@color/fc_mainColor"
                android:singleLine="true"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/bg_input_rounded_01"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:text="@string/user_phone_auth"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"/>

        </LinearLayout>
        <Button
            android:layout_marginTop="@dimen/_25sdp"
            android:stateListAnimator="@null"
            android:textColor="@color/fc_boldColor"
            android:background="@drawable/bg_rounded_01"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"
            android:text="@string/confirm"
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"/>

    </LinearLayout>

</LinearLayout>